--- a/app/src/main/res/layout/layout_fragment_container.xml
+++ b/app/src/main/res/layout/layout_fragment_container.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_container_view"
-    android:name="com.example.smallworld.ui.map.components.MapFragment"
+    android:name="com.example.smallworld.ui.flows.map.components.MapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
